  * Fixed a segfault on 64-bit systems in rline.c due to a missing
    prototype of cgdb_malloc. Thanks to Pietro Cerutti for reporting
    and diagnosing this one!

  * Fixed a bug in the file dialog. When searching for a file,
    and you hit enter to select it, CGDB would sometimes skip to
    the next file that matches and open that file instead.

  * CGDB should now build out of the box on Cygwin again.
    CGDB used to only support building against curses.h. Now
    it also supports building against ncurses/curses.h.

  * No longer set the prompt to (gdb) on startup.

cgdb-0.6.5 (01/01/2010)

   * Turn autosourcereload to on by default. This matches GDB's behavior.

   * CGDB should successfully build on Mac OS X 10.5.
     Thanks Kyle McKay for sending in this patch.

   * Add support for :up and :down in the cgdb status bar.
     Thanks Benoit Pierre for reporting this.

   * Enhanced tgdb in a2 mode. It now understands GNAT's 
     pre-instance-choice, instance-choice, post-instance-choice extension.

   * Made searching and :commands a little more vi-like. If you abort a
     search, you can still recall the last search with 'n' or 'N'.  If you
     backspace to the beginning of the line, a :command or /search is
     aborted.

   * Added some new cgdb commands.
       :c is now a synonym for :continue
       :f is now a synonym for :finish
       :n is now a synonym for :next
       :r is not a synonym for :run
       :s is now a synonym for :step
       :start is a new command that will send "start" to the debugger
       :kill is a new command that will send "kill" to the debugger

   * Shortcut mode has been removed from cgdb. If you liked it, you can
     put these commands in your cgdbrc file,
       map r :run<CR>
       map c :continue<CR>
       map f :finish<CR>
       map n :next<CR>
       map s :step<CR>
     and you will get the same functionality. Do not forget that,
       F5 is the same as 'run'.
       F6 is the same as 'continue'.