@@ -1,3 +1,6 @@
+  * Fixed a compile error on Cygwin 1.7 (signature for path conversion
+    functions changed).
+
   * Fixed a segfault on 64-bit systems in rline.c due to a missing
     prototype of cgdb_malloc. Thanks to Pietro Cerutti for reporting
     and diagnosing this one!
